--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2"
+  },
+  "dependencies": {
+    "axios": "^1.3.4"
   }
 }
